--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -1,5 +1,6 @@
 <footer class="footer">
   <div class="footer-inner">
+	  teste
     {{#link 'help_center'}}{{help_center.name}}{{/link}}
 
     <div class="footer-language-selector">
